Funciona el put

--- a/vista/vistaCarta.ejs
+++ b/vista/vistaCarta.ejs
@@ -43,7 +43,7 @@
                     <label for="exampleFormControlInput1" class="form-label">Carta</label>
                     <input type="text" class="form-control" id="txtCarta" name="txtCarta" placeholder="carta"  
                     <% if (modo='edicion') { %>
-                        disabled value=<%=carta.cta_nombre%>
+                        value=<%=carta.cta_nombre%>
                     <% } %>
                     />
                     <label class="form-label">Cantidad</label>
