--- a/vista/vistaColeccion.ejs
+++ b/vista/vistaColeccion.ejs
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Coleccion de Cartas</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container text-center">
-            <div class="row">
-                <div class="col">
-                    placeholder
-                </div>
-            </div>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+    <title>Carta</title>
+</head>
+<body>
+    
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+ 
+    <script>
+        async function buscarCarta(){
+            const respuesta = await fetch("https://api.scryfall.com/cards/named?fuzzy="+txtCarta.value)
+            if (respuesta.ok){
+                const json = await respuesta.json()
+                imgCarta.setAttribute("src", json.image_uris.normal)
+                urlImagen.value=json.image_uris.normal
+                idScryfall=json.id
+            }else{
+                imgCarta.setAttribute("src", "https://cards.scryfall.io/normal/front/9/3/93acc8a5-c694-4ad8-b4c0-2e156424319d.jpg?1592710105")
+                urlImagen.value="https://cards.scryfall.io/normal/front/9/3/93acc8a5-c694-4ad8-b4c0-2e156424319d.jpg?1592710105"
+                idScryfall=""
+                alert("Carta No Encontrada")
+                txt.value = ""
+            }
+        }
+    </script>
 </html>
