--- a/vista/vistaCarta.ejs
+++ b/vista/vistaCarta.ejs
@@ -41,7 +41,7 @@
                 <form method="POST" action="/insertarcarta">
         <% } %>
             <div class="card" style="width: 18rem;">
-                <% if (modo=='eidicion') { %>
+                <% if (modo=='edicion') { %>
                     <img id="imgCarta" src=<%=carta.cta_uri_imagen%> class="card-img-top" alt="..." width="100%">
                     <% } else { %>
                     <img id="imgCarta" src="https://cards.scryfall.io/normal/front/9/3/93acc8a5-c694-4ad8-b4c0-2e156424319d.jpg?1592710105" class="card-img-top" alt="..." width="100%">   
