Vistas con Template engine Funcionando

--- a/vista/vistaCarta.ejs
+++ b/vista/vistaCarta.ejs
@@ -37,13 +37,13 @@
 
         <% if (modo=='edicion') { %>
                 <form method="POST" action="/carta?_method=PUT">
-            <% } else { %>
+        <% } else { %>
                 <form method="POST" action="/insertarcarta">
         <% } %>
             <div class="card" style="width: 18rem;">
                 <% if (modo=='edicion') { %>
-                    <img id="imgCarta" src=<%=carta.cta_uri_imagen%> class="card-img-top" alt="..." width="100%">
-                    <% } else { %>
+                    <img id="imgCarta" src="<%=carta.cta_uri_imagen%>" class="card-img-top" alt="..." width="100%">
+                <% } else { %>
                     <img id="imgCarta" src="https://cards.scryfall.io/normal/front/9/3/93acc8a5-c694-4ad8-b4c0-2e156424319d.jpg?1592710105" class="card-img-top" alt="..." width="100%">   
                 <% } %>
 
