--- a/vista/vistaLogin.ejs
+++ b/vista/vistaLogin.ejs
@@ -49,11 +49,11 @@
     <div class="contenedor">
         <form class="item" method="post" action="/login">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="usuario" placeholder="name@example.com" name="usuario">
+                <input type="text" class="form-control" id="usuario" placeholder="name@example.com" name="usu_nombre">
                 <label for="usuario">Usuario</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="usuario" placeholder="Password" name="usuario">
+                <input type="password" class="form-control" id="usuario" placeholder="Password" name="usu_password">
                 <label for="usuario">Password</label>
             </div>
             <input type="submit" class="btn btn-primary">
